# 8-sem-exp-planning

./: .gitignore
lab_01/src/: interface.py
lab_02/src/: PfeFrame.py  functions.py  main.py
lab_03/: CMakeLists.txt  combinatorics.cpp  experiment.cpp  experiment.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  random.cpp  simulate.cpp  statistics.cpp
lab_04/: CMakeLists.txt  combinatorics.cpp  experiment.cpp  experiment.hpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
